@@ -106,6 +106,7 @@
     <Compile Include="Language\Undefined.cs" />
     <Compile Include="ObjectUtilities.cs" />
     <Compile Include="Predicates.cs" />
+    <Compile Include="Primitives\WriteLineFunction.cs" />
     <Compile Include="Primitives\ObjectFunction.cs" />
     <Compile Include="Primitives\WriteFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
